apps/lette-web/versions/1.0--1.0/manifests/lette-console-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: lette-console
  labels:
    app: lette-console
spec:
  selector:
    app: lette-console
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 3000
