apps/lette-web/versions/1.0--1.0/manifests/lette-landingpage-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-namecom
  name: lette-landingpage-ingress
spec:
  rules:
  - host: lette.io
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: lette-landingpage
            port:
              number: 80
  tls: # < placing a host in the TLS config will determine what ends up in the cert's subjectAltNames
  - hosts:
    - lette.io
    secretName: lette-landingpage-cert # < cert-manager will store the created certificate in this secret.
