apps/lette-web/versions/1.0--1.0/manifests/lette-web-ingress.yaml
# was replaced by gateway api, but keeping it here for reference

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-namecom
  name: lette-web
spec:
  rules:
  - host: lette.io
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: lette-landingpage
            port:
              number: 80
  - host: www.lette.io
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: lette-landingpage
            port:
              number: 80
  - host: lette.io
    http:
      paths:
      - pathType: ImplementationSpecific
        path: "/(console|console/.*|_app/.*|api/.*)"
        backend:
          service:
            name: lette-console
            port:
              number: 80
  - host: www.lette.io
    http:
      paths:
      - pathType: ImplementationSpecific
        path: "/(console|console/.*|_app/.*|api/.*)"
        backend:
          service:
            name: lette-console
            port:
              number: 80
  tls:
  - hosts:
    - lette.io
    - www.lette.io
    secretName: lette-web-cert
