apps/lette-web/versions/1.0--1.0/manifests/lette-web-routes.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: lette-web-https
spec:
  parentRefs:
    - name: k8s01-lb01
      namespace: gateway
      sectionName: https
  hostnames:
    - lette.io
    - www.lette.io
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /console
        - path:
            type: PathPrefix
            value: /_app
        - path:
            type: PathPrefix
            value: /api
      backendRefs:
        - name: lette-console
          port: 80
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: lette-landingpage
          port: 80
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: lette-web-http-redirect
spec:
  parentRefs:
    - name: k8s01-lb01
      namespace: gateway
      sectionName: http
  hostnames:
    - lette.io
    - www.lette.io
  rules:
    - filters:
        - type: RequestRedirect
          requestRedirect:
            scheme: https
            statusCode: 301
